@@ -1,5 +1,10 @@
 2009-03-03  Badlop  <badlop@process-one.net>
 
+	* src/web/ejabberd_http_poll.erl: Allow configuration of session
+        timeout, using new global option http_poll_timeout (EJAB-135)
+        * doc/guide.tex: Document new option
+        * doc/guide.html: Likewise
+
 	* src/ejabberd_system_monitor.erl: Allow parametrizable watchdog
 	threshold: option watchdog_large_heap or chatting with the
 	watchdog bot (EJAB-545)
